Fixed focus colour on navigation toggle on tablet/mobile

--- a/wp-open-data-toronto/style.css
+++ b/wp-open-data-toronto/style.css
@@ -3,7 +3,7 @@ Theme Name:      WP Open Data Toronto
 Description:     Theme created to integrate CKAN with WP
 Author:          Sidra Mahmood, Yizhao Tan, Carlos Hernandez
 Template:        wp-bootstrap-starter
-Version:         1.2.0
+Version:         2.0.1
 -------------------------------------------------------------- */
 
 /* Index
@@ -457,9 +457,13 @@ main.site-content a:link{
      padding: 0 !important;
 }
  .navbar-light .navbar-toggler {
-     color: rgb(0, 0, 0) !important;
+     color: rgb(0, 0, 0);
      border: 1px solid #cccccc !important;
 }
+.navbar-toggler:focus{
+        background: #aedcff !important;
+    }
+
  .profile-photo img {
      margin: 15px 0;
      max-width: 100%;
